--- a/pom.xml
+++ b/pom.xml
@@ -3,12 +3,19 @@
   <groupId>de.secretcraft</groupId>
   <artifactId>Galibri</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  <repositories>
+	<repository>
+         <id>repobo-rel</id>
+         <name>repo.bukkit.org Releases</name>
+         <url>http://repo.bukkit.org/content/repositories/releases</url>
+     </repository>
+  </repositories>
   <dependencies>
   	<dependency>
-  		<groupId>junit</groupId>
-  		<artifactId>junit</artifactId>
-  		<version>4.10</version>
-  	</dependency>
+  		<groupId>org.bukkit</groupId>
+  		<artifactId>bukkit</artifactId>
+  		<version>1.3.2-R0.1</version>
+	</dependency>
   </dependencies>
   <name>Galibri</name>
   <organization>
