--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
   	<dependency>
   		<groupId>org.bukkit</groupId>
   		<artifactId>bukkit</artifactId>
-  		<version>1.3.2-R0.1</version>
+  		<version>1.3.1-R2.0</version>
 	</dependency>
   </dependencies>
   <name>Galibri</name>
@@ -22,4 +22,6 @@
   	<name>Secretcraft</name>
   	<url>http://www.secretcraft.de</url>
   </organization>
+  <url>https://github.com/SecretCraft/GaLiBri</url>
+  <description>Gate, Lift and Bridge funtionality like FalseBook and CraftsBook but lighweight</description>
 </project>
