--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,4 +1,13 @@
 gate-search-range:
-   x: 5
-   y: 5
-   z: 5
+   x: 4
+   y: 4
+   z: 4
+gate-blocks:
+- 85
+- 101
+- 102
+- 113
+gate-archway-blocks:
+- 1
+- 4
+- 5
