tweaked lift and gate functionality

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
-name: ${project.name}
+name: GaLiBri
 main: de.secretcraft.galibri.GalibriPlugin
-version: ${project.version}
+version: 0.2
 author: sascha thiel
 description: Gate, Lift and Bridge functionality
