--- a/.classpath
+++ b/.classpath
@@ -32,5 +32,6 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="B:/jar/bukkit-1.3.2-R1.0.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
